# RMP-LosRios

./: .gitignore  CMakeLists.txt  DataModel.js  Main.qml  README.md  database.cpp  database.h  main.cpp  networkmanager.cpp  networkmanager.h  teachermodel.cpp  teachermodel.h  unittest.cpp  unittest.h
.github/workflows/: cmake-single-platform.yml
content/: AddReviewPage.qml  HomePage.qml  LoginMenu.qml  PopupSuggestion.qml  ProfileSettings.qml  Review.qml  ReviewItem.qml  SearchResults.qml  SignUpPage.qml  TeacherResult.qml  TeacherReviews.qml  TopBar.qml
